--- a/exercises/exercise-02/index.html
+++ b/exercises/exercise-02/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
     <title>Houses of Museums?</title>
 </head>
@@ -7,6 +7,6 @@
 
     <h1>Hello World,GSAPP</h1>
     
-    <p><a href="exercises/exercise-02/index.html">Houses or Musuems?</a>
+    <p><a href="exercises/exercise-02/index.html">Houses or Musuems?</a></p>
 </body>
 </html>
