--- a/index.html
+++ b/index.html
@@ -1,11 +1,27 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title>Page Title</title>
-</head>
-<body>
+    <head>
+        <title>Coding for Spacial Practices | Home Page</title>
+        <link rel="stylesheet" href="style.css">
+    </head>
+    <body>
 
-Hello World
+       <h1>Coding for Spacial Practices</h1>
 
-</body>
+       <p><h2>Exercises</h2></p>
+       <p><a href="exercises\exercise-01">Exercise-01 Hello World</a></p>
+       <p><a href="exercises\exercise-02">Exercise-02 Make up Lina Bo Bardi</a></p>
+       <p><a href="exercises\exercise-03">Exercise-03 Style Lina Bo Bardi</a></p>
+       <p><a href="exercises\exercise-04">Exercise-04 Layout Lina Bo Bardi </a></p>
+       <p><a href="exercises\exercise-05">Exercise-05 Responsive Lina Bo Bardi </a></p>
+       <p><a href="exercises\exercise-06">Exercise-06 Navigation Animation </a></p>
+       <p><a href="exercises\exercise-07">Exercise-07 Sentence Generator </a></p>
+       <p><a href="exercises\exercise-08">Exercise-08 Color scheme switch </a></p>
+       
+       <p><h2>Projects</h2></p>
+       <p><a href="https://www.are.na/yutong-deng/coding-for-spacial-practices-xj9krofdtk0">Project-01 Image Journal</a></p>
+       <p><a href="project\p2 html html\index.html">Project-02 HTML HTML HTML</a></p>
+       <p><a href="https://yutongdeng.github.io/Wongpingartwork/">project-03 Website-Hot pot</a></p>
+    </main>
+  </body>
 </html>
