--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
        <p><h2>Projects</h2></p>
        <p><a href="https://www.are.na/yutong-deng/coding-for-spacial-practices-xj9krofdtk0">Project-01 Image Journal</a></p>
        <p><a href="project\p2 html html\index.html">Project-02 HTML HTML HTML</a></p>
-       <p><a href="https://yutongdeng.github.io/Wongpingartwork/">project-03 Website-Hot pot</a></p>
+       <p><a href="https://yutongdeng.github.io/Wongpingartwork/">project-03 Website-Wongping Artwork</a></p>
     </main>
   </body>
 </html>
