--- a/project/p3 website/index.html
+++ b/project/p3 website/index.html
@@ -1,1 +1,14 @@
-The website is in a new repository.
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>The website is in a new repository.</title>
+    <p>The website is in a new repository.</p>
+    <a href="https://yutongdeng.github.io/Wongpingartwork/">here's the link</a>
+</head>
+<body>
+    
+</body>
+</html>
